packages/insight-previous/src/app/app.scss
// http://ionicframework.com/docs/v2/theming/

// App Global Sass
// --------------------------------------------------
// Put style rules here that you want to apply globally. These
// styles are for the entire app and not just one component.
// Additionally, this file can be also used as an entry point
// to import other Sass files to be included in the output CSS.

body {
  user-select: text;
}

a {
  cursor: pointer;
}

.ellipsis {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.item-hash {
  @extend .ellipsis;
  opacity: 0.7;
}

.list--summary {
  ion-label {
    color: #334;
    font-weight: bold;
  }

  ion-item {
    color: #99a;
    font-size: 1.125rem;
    @media screen and (min-width: $desktop-min-width) {
      font-size: 1.4rem;
    }
    padding: 0;
  }

  ion-note {
    color: #99a;
    max-width: 80%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

.grid--table {
  margin: 10px 0 20px;

  .col {
    padding: 1em 0.6em;
  }

  ion-row {
    border-top: 1px solid #dde;

    &:first-child {
      background-color: #fff;
      border-top: none;
    }

    &:nth-child(even) {
      background-color: #f8f8f9;
    }

    &:last-child {
      background-color: #fff;
    }
  }
}

ion-icon {
  &[class*="custom-"] {
    mask-size: contain;
    mask-position: 50% 50%;
    mask-repeat: no-repeat;
    width: 6rem;
    height: 6rem;
  }

  &[class*="custom-github"] {
    mask-image: url(../assets/img/github.svg);
    background: #263238;
  }
  &[class*="custom-bitpay"] {
    mask-image: url(../assets/img/bitpay.svg);
    background: #293b92;
  }
}


ion-title {
  &.logo-header {
    .toolbar-title{
      color: white;
      font-weight: 700;
      font-style: italic;
      font-size: 2em;
    }
  }
}
.menu-inner >
  ion-content{
    position: relative;
  }

ion-footer{
  height: 7rem;
  display: flex;
  flex-direction: column;
  .footer-title{
    display: flex;
    width: 100%;
    padding: 5px 0 0 16px;
  }
  .about{
    display: flex;
    justify-content: space-around;
    width: 100%; 
    align-self: center;
    height: 100%;
  }
}
// Shared Sass variables, which can be used to adjust Ionic's
// default Sass variables, belong in "theme/variables.scss".
//
// To declare rules for a specific mode, create a child rule
// for the .md, .ios, or .wp mode classes. The mode class is
// automatically applied to the <body> element in the app.

